refactor: migrate project to Gradle and add unit testing suite for sun and weather modules